# trying12

./: .env_example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_push.yaml
deploy/: .env  .env_example  docker-compose.yaml
src/: .env
src/bot/: models.py  serializers.py  urls.py  views.py
src/bot/management/commands/: runbot.py
src/bot/migrations/: 0001_initial.py
src/bot/tg/: client.py  models.py
src/bot/tg/fsm/: base.py  memory_storage.py
src/core/: admin.py
src/core/migrations/: 0001_initial.py
src/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
src/tests/: factories.py  fixtures.py
src/tests/core/: profile_test.py  user_create_test.py
src/tests/goals/: board_test.py  categories_test.py  comment_test.py  goal_test.py
src/todolist/: settings.py  urls.py
