[tool.poetry]
name = "trying12"
version = "0.1.0"
description = ""
authors = ["mari <altysheva_maria@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tools.isort]
py_version = 310
profile = 'django'
line_length = 120
multi_line_output = 2
known_first_party = ["todolist", "core"]

#[tool.flake8]
#max-line-length = 120
#per-file-ignores = """*/migrations/*: E501"""
